--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,3 +1,7 @@
 {
-    "title": "ProLang"
+    "title": "ProLang",
+    "auth": {
+        "anonymous": "Anonimous sign in",
+        "google": "Sign in with Google"
+    }
 }
