--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -1,3 +1,7 @@
 {
-    "title": "ProЯзыки"
+    "title": "ProЯзыки",
+    "auth": {
+        "anonymous": "Войти анонимно",
+        "google": "Войти с Google"
+    }
 }
