--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -1,8 +1,41 @@
 {
     "title": "ProЯзыки",
+    "subtitle": "Начни говорить на\nиностранном языке",
+    "next": "Вперед",
+    "skip": "Пропустить",
     "auth": {
         "anonymous": "Войти анонимно",
         "google": "Войти с Google"
+    },
+    "intro": {
+        "baloon": {
+            "title": "НЕТ  ЯЗЫКОВОГО  БАРЬЕРА",
+            "description": "Вы начинаете говорить на иностранном языке прямо с первых уроков. Используя схемы и определенные наборы слов вы составляете свои собственные фразы, задаете вопросы и отвечаете на них."
+        },
+        "water": {
+            "title": "БЕЗ  ВОДЫ",
+            "description": "Вы не тратите время на долгое объяснение материала и понимание правил. Вся грамматика разбита на маленькие кусочки. В каждом уроке мы берем небольшой кусочек, представленный на схеме (время объяснения 5-10 минут),  отрабатываем его на практике и доводим применение правила до автоматизма."
+        },
+        "world": {
+            "title": "БЕЗ  УЧЕБНИКОВ И  СКУЧНЫХ УПРАЖНЕНИЙ",
+            "description": "Вам не нужно искать информацию в учебниках или интернете, не нужно делать упражнения в тетради. Мы все сделали за вас! Вам нужен только смартфон/компьютер и доступ в интернет. Вы тренируетесь и запоминаете слова и правила прямо во время видеоурока!"
+        },
+        "feedback": {
+            "title": "ОБРАТНАЯ  СВЯЗЬ",
+            "description": "Несмотря на то, что это онлайн-курсы, преподаватель всегда отвечает на ваши вопросы и дает обратную связь по выполненным творческим заданиям."
+        },
+        "rumour": {
+            "title": "ПОНИМАНИЕ  НА  СЛУХ",
+            "description": "Мы начинаем тренировать понимание иностранной речи на слух прямо с первых уроков. Вы слушаете те фразы, которые составляли сами в исполнении носителя языка, узнаете их и сразу переводите на русский язык."
+        },
+        "groups": {
+            "title": "ПОДДЕРЖКА  ОКРУЖЕНИЯ",
+            "description": "Вы проходите обучение в группах. Вы находитесь в среде единомышленников и сразу начинаете общение на иностранном языке. "
+        },
+        "auth": {
+            "title": "АУДЕНТИФИКАЦИЯ",
+            "description": "Для старта обучения войдите с помощью Google либо опробуйте базовый функционал используя анонимный вход."
+        }
     },
     "select_lang": {
         "title": "Выберите язык"
