--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -37,7 +37,10 @@
             "description": "Для старта обучения войдите с помощью Google либо опробуйте базовый функционал используя анонимный вход."
         }
     },
-    "select_lang": {
-        "title": "Выберите язык"
+    "lang_list": {
+        "title": "Языки"
+    },
+    "lesson_list": {
+        "title": "Уроки"
     }
 }
