Add lesson screen, update lesson model, minor refactorings

--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -67,6 +67,10 @@
             "title": {
                 "label": "Название",
                 "hint": "Основы, тема..."
+            },
+            "description": {
+                "label": "Описание",
+                "hint": "В этой секции будут рассмотрены следующие темы..."
             }
         }
     },
