--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -7,6 +7,7 @@
     "create": "Создать",
     "edit": "Применить",
     "cancel": "Отмена",
+    "unattach": "Открепить",
     "required_field": "Это поле обязательно к заполнению.",
     "intro": {
         "baloon": {
@@ -79,6 +80,10 @@
             "description": {
                 "label": "Описание",
                 "hint": "В этой секции будут рассмотрены следующие темы..."
+            },
+            "video": {
+                "label": "Видео",
+                "unattach_confirmation": "Открепить видео?"
             }
         }
     },
@@ -102,6 +107,9 @@
             "description": {
                 "label": "Описание",
                 "hint": "В этой секции будут рассмотрены следующие темы..."
+            },
+            "video": {
+                "label": "Видео"
             }
         }
     }
