--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -110,6 +110,33 @@
             },
             "video": {
                 "label": "Видео"
+            },
+            "grammar": {
+                "label": "Грамматическая схема",
+                "unattach_confirmation": "Открепить грамматическую схему?"
+            }
+        }
+    },
+    "lesson_phrase_form": {
+        "create": {
+            "confirmation": "Создать фразу?",
+            "progress": "Создаю фразу...",
+            "title": "Новая фраза"
+        },
+        "edit": {
+            "confirmation": "Применить изменения?",
+            "progress": "Обновляю фразу...",
+            "title": "Изменить фразу"
+        },
+        "general": {
+            "label": "Основные",
+            "original": {
+                "label": "Оригинал",
+                "hint": "Оригинальное предложение..."
+            },
+            "translated": {
+                "label": "Перевож",
+                "hint": "Переведенное предложение..."
             }
         }
     }
