Add yandex checkout payments with ios/android/web support

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -8,6 +8,7 @@
     "edit": "Confirm",
     "cancel": "Cancel",
     "unattach": "Unattach",
+    "dismiss": "Dismiss",
     "required_field": "This field is required.",
     "intro": {
         "baloon": {
