--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -8,6 +8,7 @@
     "edit": "Применить",
     "cancel": "Отмена",
     "unattach": "Открепить",
+    "dismiss": "Скрыть",
     "required_field": "Это поле обязательно к заполнению.",
     "intro": {
         "baloon": {
