fix translation minor bugs, lesson section price form field

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -122,6 +122,9 @@
             "description": {
                 "label": "Description",
                 "hint": "In that section you will learn..."
+            },
+            "price": {
+                "label": "Price"
             }
         }
     },
