--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -123,8 +123,8 @@
                 "label": "Описание",
                 "hint": "В этой секции будут рассмотрены следующие темы..."
             },
-            "video": {
-                "label": "Видео"
+            "price": {
+                "label": "Цена"
             }
         }
     },
