Add phrase audio support

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -148,6 +148,10 @@
             "translated": {
                 "label": "Translated",
                 "hint": "Translated sentence..."
+            },
+            "audio": {
+                "label": "Translated audio",
+                "unattach_confirmation": "Unattach audio?"
             }
         }
     },
