--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -146,8 +146,12 @@
                 "hint": "Оригинальное предложение..."
             },
             "translated": {
-                "label": "Перевож",
+                "label": "Перевод",
                 "hint": "Переведенное предложение..."
+            },
+            "audio": {
+                "label": "Озвучка переведенного предложения",
+                "unattach_confirmation": "Открепить озвучку?"
             }
         }
     },
