--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -8,6 +8,8 @@
     "edit": "Применить",
     "cancel": "Отмена",
     "attach": "Прикрепить",
+    "crop": "Обрезать",
+    "no_crop": "Оставить оригинал",
     "unattach": "Открепить",
     "dismiss": "Скрыть",
     "required_field": "Это поле обязательно к заполнению.",
@@ -47,6 +49,12 @@
     },
     "lang_list": {
         "title": "Языки"
+    },
+    "lang": {
+        "delete": {
+            "confirmation": "Удалить язык?",
+            "progress": "Удаляю язык..."
+        }
     },
     "lesson": {
         "delete": {
@@ -89,8 +97,8 @@
                 "label": "Название",
                 "hint": "Английский, Испанский, тд..."
             },
-            "teacher": {
-                "label": "Преподаватель",
+            "initials": {
+                "label": "Инициалы",
                 "hint": "Иван Иванов..."
             },
             "flag": {
@@ -107,6 +115,10 @@
             },
             "color": {
                 "label": "Цвет"
+            },
+            "teacher": {
+                "label": "Преподаватель",
+                "hint": "Выберите пользователя"
             }
         }
     },
