--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -43,9 +43,35 @@
             "description": "Для старта обучения войдите с помощью Google либо опробуйте базовый функционал используя анонимный вход.",
             "button": {
                 "anonymous": "Войти анонимно",
-                "google": "Войти с Google"
+                "google": "Войти с Google",
+                "apple": "Войти с Apple",
+                "email": "Войти с эл. почтой"
             },
-            "progress": "Авторизируюсь..."
+            "progress": "Авторизируюсь...",
+            "email": {
+                "title": "Авторизация",
+                "email": {
+                    "label": "Эл. почта",
+                    "hint": "yourmail@example.com",
+                    "error": {
+                        "incorrect": "Некорректная почта."
+                    }
+                },
+                "password": {
+                    "label": "Пароль",
+                    "hint": "Введите пароль",
+                    "error": {
+                        "small": "Длина пароля должна быть >6 символов."
+                    }
+                },
+                "password_confirm": {
+                    "label": "Подтверждение пароля",
+                    "hint": "Введите пароль еще раз",
+                    "error": {
+                        "same": "Пароли должны совпадать."
+                    }
+                }
+            }
         }
     },
     "lang_list": {
