--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -174,6 +174,18 @@
                 "label": "Video",
                 "unattach_confirmation": "Unattach video?"
             },
+            "audio": {
+                "label": "Audio",
+                "unattach_confirmation": "Unattach audio?"
+            },
+            "pdf": {
+                "label": "PDF",
+                "unattach_confirmation": "Unattach PDF?"
+            },
+            "image": {
+                "label": "Image",
+                "unattach_confirmation": "Unattach image?"
+            },
             "grammar": {
                 "label": "Grammatical scheme",
                 "unattach_confirmation": "Unattach grammatical scheme?"
